deploy/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quai-api
  namespace: quai
spec:
  selector:
    app: quai-api
  ports:
    - name: http
      port: 3000
      targetPort: http
  type: ClusterIP
