deploy/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quai-web
  namespace: quai
spec:
  selector:
    app: quai-web
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
